--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<h1>Esta es una prueba</h1>
-	<button onclick="alert('Hola cosota')">Prueba</button>
+	<div>
+		<button class="boton" onclick="alert('Hola cosota')">Prueba</button>
+	</div>
+	
 </body>
 </html>
