--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html>
 <head>
 	<title>InforPet</title>
-	<script src="script.js"></script>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css" type="text/css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Esta es una prueba</h1>
-	<div>
-		<button class="boton" onclick="alert('Hola cosota')">Prueba</button>
+	<div class="fondo"></div>
+	<div class="buscador">
+		<div class="form-group has-feedback">
+			<i class="fa fa-search form-control-feedback"></i>
+			<input type="text" class="form-control" placeholder="Buscador de productos y/o servicios">
+		</div>
 	</div>
 	
+	<script src="themes/js/jquery-1.9.1.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="themes/js/jquery.scrollTo-1.4.3.1-min.js" type="text/javascript"></script>
+	<script src="themes/js/jquery.easing-1.3.min.js"></script>
+	<script src="themes/js/jquery.scrollTo-1.4.3.1-min.js"></script>
+	<script src="themes/js/jquery.prettyPhoto.js"></script>
+	<script src="themes/js/custom.js" type="text/javascript"></script>
+	<script src="script.js"></script>
+
 </body>
 </html>
