--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	<script src="themes/js/jquery.scrollTo-1.4.3.1-min.js"></script>
 	<script src="themes/js/jquery.prettyPhoto.js"></script>
 	<script src="themes/js/custom.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/linq.js/2.2.0.2/linq.min.js"></script>
 	<script src="script.js"></script>
+	
 
 </body>
 </html>
