--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="buscador">
 		<div class="form-group has-feedback">
 			<i class="fa fa-search form-control-feedback"></i>
-			<input type="text" class="form-control" placeholder="Buscador de productos y/o servicios">
+			<input type="text" id="buscador" class="form-control" placeholder="Buscador de productos y/o servicios">
 		</div>
 	</div>
 	
