--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 			<input type="text" id="buscador" class="form-control" placeholder="Buscador de productos y/o servicios">
 		</div>
 	</div>
+
+	<div class="listaProductos" id="listaProductos">
+		<div class="containerProducto">
+			<div class="empresaNombre">Nombre empresa</div>
+			<div class="empresaDireccion">dirección</div>
+			<div class="productoNombre">Nombre Producto</div>
+			<div class="tipoEmpresaNombre">tipo empresa</div>
+		</div>
+
+	</div>
+	
 	
 	<script src="themes/js/jquery-1.9.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
