--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="listaProductos" id="listaProductos">
-		<div class="containerProducto">
+		<!-- <div class="containerProducto">
 			<div class="empresaNombre">
 				<img src="./img/supermarket-shop-logo-vector.jpg" h class="iconoEmpresa" alt=""> 
 				<label for="">Nombre empresa</label>
@@ -34,8 +34,28 @@
 				</a>
 			</div>
 			<div class="productoNombre">Nombre Producto</div>
+		</div> -->
+		
+		<div style="margin-bottom: 50px;">
+			<div style="margin-bottom: 20px; font-size: 40px; color: rgb(82, 82, 83);font-weight: 500;">
+				Como funciona
+			</div>
+			<div style="color:#383434; font-size: 30px; margin: 0 auto; margin-bottom: 30px; text-align: center;">
+				<label style="margin: 0 auto;" for="">Ingresa en el "Buscador de productos y/o servicios":</label> 
+				<ul style="width: 250px; text-align: left; margin: 0 auto;" >
+					<li>Empresa</li>
+					<li>Tipo producto</li>
+					<li>Ubicacion</li>
+					<li>Producto</li>
+					<li>Empresa</li>
+				</ul>
+			</div>
+			<div style="font-size: 30px;">
+				Selecciona tu preferencia y listo!
+			</div>
 		</div>
 		
+
 
 	</div>
 	
