--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
 			</div>
 			<div class="empresaDireccion">
 				<a target="_blank" href="https://www.google.cl/maps/place/Av.+Am%C3%A9rico+Vespucio+231,+7970705+Santiago,+La+Cisterna,+Regi%C3%B3n+Metropolitana/@-33.5388554,-70.667266,16.5z/data=!4m6!3m5!1s0x9662da56c7f40fe7:0xf5091f57b2dd6483!8m2!3d-33.5386063!4d-70.6617754!16s%2Fg%2F11sp493xxd">
-					<img src="./img/ubicacion.png" h class="iconoMapa" alt="">
+					<img src="./img/ubicacion.png" class="iconoMapa" alt="">
 					<label for="">dirección</label>	
 				</a>
 			</div>
-			<div class="productoNombre">Nombre Producto</div>
+			<div class="productoNombre">
+				<label for="">Nombre Producto</label>
+				<img style="width: 200px; height: 200px; margin: 0 auto; display: block;" src="./img/gati.jpg" class="iconoMapa" alt="">
+			</div>
+			
 		</div> -->
 		
 		<div style="margin-bottom: 50px;">
