--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div style="padding: 30px; height: 220px;  background-color: #FBF8EF; text-align: center;">
+		<img style="width: 90px; height: 50px;" src="./img/patasGatos.png">		
+		<span style="font-size: 60px;">InfoPet</span>	
+		<img style="width: 70px; height: 50px;" src="./img/patasPerros.png">
+		<span style="font-family: Verdana; font-size: 30px; display: block;">Todo para tu mascota en un solo lugar!</span>	
+	
+	</div>
 	<div class="fondo"></div>
 	<div class="buscador">
 		<div class="form-group has-feedback">
@@ -45,7 +52,7 @@
 				Como funciona
 			</div>
 			<div style="color:#383434; font-size: 30px; margin: 0 auto; margin-bottom: 30px; text-align: center;">
-				<label style="margin: 0 auto;" for="">Ingresa en el "Buscador de productos y/o servicios":</label> 
+				<label style="margin: 0 auto;" for="">Ingresa en el buscador lo que necesita tu mascota:</label> 
 				<ul style="width: 250px; text-align: left; margin: 0 auto;" >
 					<li>Empresa</li>
 					<li>Tipo producto</li>
