--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 			<div style="color:#383434; font-size: 30px; margin: 0 auto; margin-bottom: 30px; text-align: center;">
 				<label style="margin: 0 auto;" for="">Ingresa en el buscador lo que necesita tu mascota:</label> 
 				<ul style="width: 250px; text-align: left; margin: 0 auto;" >
-					<li>Empresa</li>
-					<li>Tipo producto</li>
-					<li>Ubicacion</li>
-					<li>Producto</li>				
+					<li>Comidas</li>
+					<li>Urgencias</li>
+					<li>Por ubicación</li>
+					<li>Productos</li>				
+					<li>Servicios</li>				
 				</ul>
 			</div>
 			<div style="font-size: 30px;">
