--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div style="padding: 30px; height: 220px;  background-color: #FBF8EF; text-align: center;">
 		<img style="width: 90px; height: 50px;" src="./img/patasGatos.png">		
+		<img id="btnTinderPet" style="margin-top: 30px; float: right; width: 120px; height: 65px;" src="./img/tinderPet.png">
 		<span style="font-size: 60px;">InfoPet</span>	
 		<img style="width: 70px; height: 50px;" src="./img/patasPerros.png">
 		<span style="font-family: Verdana; font-size: 30px; display: block;">Todo para tu mascota en un solo lugar!</span>	
