--- a/TinderPet/index.html
+++ b/TinderPet/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="container" style="position: relative;">
-    <img id="btninfoPet" style="position: absolute; top: 20px; right: 20px; width: 40px; height: 30px;" src="../img/580b57fcd9996e24bc43c44c.png">
+    <img id="btninfoPet" style="position: absolute; top: 30px; right: 20px; width: 60px; height: 50px;" src="../img/580b57fcd9996e24bc43c44c.png">
     <header>
       <h1>Tinder</h1>
     </header>
@@ -14,7 +14,7 @@
       <div id="profile">
         <img id="profile-picture" src="perritosexy1.jpg" alt="Profile Picture">
         <div class="profile-info">
-          <h2 id="username"></h2> 
+          <h2 id="username">Cosita</h2> 
           <p id="age" class="age">2 años</p>    
           <p id="description" class="descripcion">Soy Cosita, tengo las vacunas al día, soy limpiecito, solo hago caca en tierrita, me gusta ver las estrellas y soy Tauro</p>
         </div>
