--- a/TinderPet/index.html
+++ b/TinderPet/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <div id="profile">
-        <img id="profile-picture" src="perritosexy1.jpg" alt="Profile Picture">
+        <img id="profile-picture" src="img/perritosexy1.jpg" alt="Profile Picture">
         <div class="profile-info">
           <h2 id="username">Cosita</h2> 
           <p id="age" class="age">2 años</p>    
