--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 	<div style="padding: 30px; height: 220px;  background-color: #FBF8EF; text-align: center;">
 		<img style="width: 90px; height: 50px;" src="./img/patasGatos.png">		
-		<img id="btnTinderPet" style="margin-top: 30px; float: right; width: 120px; height: 65px;" src="./img/tinderPet.png">
 		<span style="font-size: 60px;">InfoPet</span>	
 		<img style="width: 70px; height: 50px;" src="./img/patasPerros.png">
 		<span style="font-family: Verdana; font-size: 30px; display: block;">Todo para tu mascota en un solo lugar!</span>	
@@ -47,7 +46,78 @@
 			</div>
 			
 		</div> -->
+		<div class="PruebaCarousel-container">
+			<div class="PruebaCarousel">
+				<div class="PruebaCarousel-inner">
+					<div class="PruebaSlide">
+						<label
+							style="font-size: 30px; color: #be3f5d; font-weight: bold;"
+						>
+							TinderPET
+						</label>
+						<br>
+						<img 
+							id="btnTinderPet" 
+							style="text-align: center; width: 80%; height: 80%;" 
+							src="./img/perritoCorazon.jpg"
+						>
+
+					</div>
+					<div class="PruebaSlide">
+						<label
+							style="font-size: 30px; color: #252525; font-weight: bold;"
+						>
+							Comunidad
+						</label>
+						<br>
+						<img 
+							style="text-align: center; width: 100%; height: 80%;" 
+							src="./img/Comunidad.jpg"
+						>
+					</div>
+					<div class="PruebaSlide">
+						<label
+							style="font-size: 30px; color: #dd1111; font-weight: bold;"
+						>
+							Urgencias
+						</label>
+						<br>
+						<img 
+							style="text-align: center; width: 100%; height: 100%;" 
+							src="./img/urgencias.avif"
+						>
+					</div>
+					<div class="PruebaSlide">
+						<label
+							style="font-size: 30px; color: #0e8223; font-weight: bold;"
+						>
+							Veterinarias
+						</label>
+						<br>
+						<img 
+							style="text-align: center; width: 100%; height: 100%;" 
+							src="./img/veterinarias.webp"
+						>
+					</div>
+					<div class="PruebaSlide">
+						<label
+							style="font-size: 30px; color: #0e8223; font-weight: bold;"
+						>
+							Comidas
+						</label>
+						<br>
+						<img 
+							style="text-align: center; width: 100%; height: 100%;" 
+							src="./img/comidas.avif"
+						>
+					</div>
+				</div>
+			</div>
+
+		</div>
 		
+
+
 		<div style="margin-bottom: 50px;">
 			<div style="margin-bottom: 20px; font-size: 40px; color: rgb(82, 82, 83);font-weight: 500;">
 				Como funciona
@@ -61,6 +131,9 @@
 					<li>Productos</li>				
 					<li>Servicios</li>				
 				</ul>
+			</div>
+			<div style="font-size: 30px; margin-bottom: 30px;">
+				Los resultados de la busqueda se basarán por tu ubicación
 			</div>
 			<div style="font-size: 30px;">
 				Selecciona tu preferencia y listo!
