--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 		<div class="PruebaCarousel-container">
 			<div class="PruebaCarousel">
 				<div class="PruebaCarousel-inner">
-					<div class="PruebaSlide">
+					<div class="PruebaSlide" id="btnTinderPet" >
 						<label
 							style="font-size: 30px; color: #be3f5d; font-weight: bold;"
 						>
 							TinderPET
 						</label>
 						<br>
-						<img 
-							id="btnTinderPet" 
+						<img
+							
 							style="text-align: center; width: 80%; height: 80%;" 
 							src="./img/perritoCorazon.jpg"
 						>
@@ -139,9 +139,6 @@
 				Selecciona tu preferencia y listo!
 			</div>
 		</div>
-		
-
-
 	</div>
 	
 	
