--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 		<div class="PruebaCarousel-container">
 			<div class="PruebaCarousel">
 				<div class="PruebaCarousel-inner">
-					<div class="PruebaSlide" id="btnTinderPet" >
+					<div class="PruebaSlide btnTinderPet" id="btnTinderPet" >
 						<label
 							style="font-size: 30px; color: #be3f5d; font-weight: bold;"
 						>
-							TinderPET
+							TinderPet
 						</label>
 						<br>
 						<img
