--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 						</label>
 						<br>
 						<img 
-							style="text-align: center; width: 100%; height: 100%;" 
+							style="text-align: center; width: 100%; height: 90%;" 
 							src="./img/veterinarias.webp"
 						>
 					</div>
 					<div class="PruebaSlide">
 						<label
-							style="font-size: 30px; color: #0e8223; font-weight: bold;"
+							style="font-size: 30px; color: #e0c112; font-weight: bold;"
 						>
 							Comidas
 						</label>
