--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					
 						<div class="PruebaSlide" >
 							<a href="./tinderPet/index.html" style="width: 300px!important;">
-								<label
+								<label id="btnTinderPet"
 								style="font-size: 30px; color: #be3f5d; font-weight: bold;"
 							>
 								TinderPet
@@ -137,7 +137,7 @@
 				</ul>
 			</div>
 			<div style="font-size: 30px; margin-bottom: 30px;">
-				Los resultados de la busqueda se basarán por tu ubicación
+				Los resultados de la busqueda se basarán por tu ubicación.
 			</div>
 			<div style="font-size: 30px;">
 				Selecciona tu preferencia y listo!
