--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="PruebaCarousel-inner">
 					
 						<div class="PruebaSlide" >
-							<a href="./tinderPet/index.html" style="width: 300px!important;">
+							<a href="./TinderPet/index.html" style="width: 300px!important;">
 								<label id="btnTinderPet"
 								style="font-size: 30px; color: #be3f5d; font-weight: bold;"
 							>
