--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			<div class="PruebaCarousel">
 				<div class="PruebaCarousel-inner">
 					
-						<div class="PruebaSlide" >
+						<div class="PruebaSlide" id="btnTinderPet" >
 							<a href="./TinderPet/index.html" style="width: 300px!important;">
-								<label id="btnTinderPet"
+								<label 
 								style="font-size: 30px; color: #be3f5d; font-weight: bold;"
 							>
 								TinderPet
@@ -137,7 +137,7 @@
 				</ul>
 			</div>
 			<div style="font-size: 30px; margin-bottom: 30px;">
-				Los resultados de la busqueda se basarán por tu ubicación.
+				Los resultados de la busqueda se basarán por tu ubicación
 			</div>
 			<div style="font-size: 30px;">
 				Selecciona tu preferencia y listo!
