--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				</ul>
 			</div>
 			<div style="font-size: 30px; margin-bottom: 30px;">
-				Los resultados de la busqueda se basarán por tu ubicación.
+				Los resultados de la busqueda se basarán por tu ubicación..
 			</div>
 			<div style="font-size: 30px;">
 				Selecciona tu preferencia y listo!
