--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet"/>
 	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.3.7/css/swiper.min.css">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -46,7 +48,45 @@
 			</div>
 			
 		</div> -->
-		<div class="PruebaCarousel-container">
+		<div class="swiper-container">
+			<div class="swiper-wrapper">
+			  <div class="swiper-slide">
+				<a href="./TinderPet/index.html">
+					<div style="text-decoration: none; float: left; width: 40%;">
+						<div style="font-size: 40px; color: crimson; margin-bottom: 30px;">TinderPet</div>
+						<p>Encuentra pareja a tu mascota de una manera facil y divertida</p>
+
+					</div>
+					<div style="text-decoration: none; float: right; width: 59%;">
+						<img
+						style="text-align: center;" 
+						src="./img/perritoCorazon.jpg"
+					>
+					</div>
+					
+				</a>
+			  </div>
+			  <div class="swiper-slide">
+				<a href="pagina2.html">
+					<img 
+						style="text-align: center; width: 100%; height: 80%;" 
+						src="./img/Comunidad.jpg"
+					>
+				</a>
+			  </div>
+			  <div class="swiper-slide">
+				<a href="pagina3.html">
+					<img 
+						style="text-align: center; width: 100%; height: 100%;" 
+						src="./img/urgencias.avif"
+					>
+				</a>
+			  </div>
+			</div>
+		  </div>
+		
+
+		<!-- <div class="PruebaCarousel-container">
 			<div class="PruebaCarousel">
 				<div class="PruebaCarousel-inner">
 					
@@ -118,7 +158,7 @@
 				</div>
 			</div>
 
-		</div>
+		</div> -->
 		
 
 
@@ -154,6 +194,7 @@
 	<script src="themes/js/jquery.prettyPhoto.js"></script>
 	<script src="themes/js/custom.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/linq.js/2.2.0.2/linq.min.js"></script>
+	<script src=" https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.3.7/js/swiper.js"></script>
 	<script src="script.js"></script>
 	
 
