--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			  <div class="swiper-slide">
 				<a href="./TinderPet/index.html">
 					<div style="text-decoration: none; float: left; width: 40%;">
-						<div style="font-size: 50px; color: crimson; margin-bottom: 30px;">TinderPet</div>
-						<p style="font-size: 30px;">Encuentra pareja a tu mascota de una manera facil y divertida</p>
+						<div style="font-size: 50px; color: crimson; margin-bottom: 10px;">TinderPet</div>
+						<p style="font-size: 30px; text-align: justify; ">Encuentra pareja a tu mascota de una manera facil y divertida</p>
 
 					</div>
 					<div style="text-decoration: none; float: right; width: 59%;">
