--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
 			  <div class="swiper-slide">
-				<a href="./TinderPet/index.html">
-					<div style="text-decoration: none; float: left; width: 40%;">
-						<div style="font-size: 50px; color: crimson; margin-bottom: 10px;">TinderPet</div>
-						<p style="font-size: 30px; text-align: justify; ">Encuentra pareja a tu mascota de una manera facil y divertida</p>
-
-					</div>
-					<div style="text-decoration: none; float: right; width: 59%;">
+				<a href="./tinderPets/index.html">
+					
+					<label style="margin-bottom:20px; font-size: 30px; color: #be3f5d; font-weight: bold;">
+							TinderPet
+					</label>
+						
+					<div style="text-decoration: none;">
 						<img
 						style="text-align: center;" 
 						src="./img/perritoCorazon.jpg"
