link css eventos

--- a/index.html
+++ b/index.html
@@ -90,6 +90,49 @@
 					</div>
 				</a>
 			  </div>
+
+			  
+			  <div class="swiper-slide" style="text-align: center;">
+				<a href="./veterinaria/index.html">
+					<label style="margin-bottom:20px; font-size: 30px; color: #0e8223; font-weight: bold;">
+						Veterinarias
+					</label>
+					<div style="text-decoration: none;">
+						<img
+						style="text-align: center;" 
+						src="./img/veterinarias.webp"
+					>
+					</div>
+				</a>
+			  </div>
+
+			  <div class="swiper-slide" style="text-align: center;">
+				<a href="./comida/index.html">
+					<label style="margin-bottom:20px; font-size: 30px; color: #e0c112; font-weight: bold;">
+						Comidas
+					</label>
+					<div style="text-decoration: none;">
+						<img
+						style="text-align: center;" 
+						src="./img/comidas.avif"
+					>
+					</div>
+				</a>
+			  </div>
+
+			  <div class="swiper-slide" style="text-align: center;">
+				<a href="./eventos/index.html">
+					<label style="margin-bottom:20px; font-size: 30px; color: #e0c112; font-weight: bold;">
+						Eventos
+					</label>
+					<div style="text-decoration: none;">
+						<img
+						style="text-align: center;" 
+						src="./img/eventos.jpg"
+					>
+					</div>
+				</a>
+			  </div>
 			 
 			</div>
 		  </div>
