--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 			<input type="text" id="buscador" class="form-control" placeholder="Buscador de productos y/o servicios">
 		</div>
 	</div>
-
 	<div class="listaProductos" id="listaProductos">
 		<!-- <div class="containerProducto">
 			<div class="empresaNombre">
@@ -229,9 +228,9 @@
 				</ul>
 			</div>
 			<div style="font-size: 30px; margin-bottom: 30px;">
-				Los resultados de la busqueda se basarán por tu ubicación.
+				Los resultados de la busqueda se basarán por tu ubicación
 			</div>
-			<div style="font-size: 30px;">
+			<div id="llamar" style="font-size: 30px;">
 				Selecciona tu preferencia y listo!
 			</div>
 		</div>
